# vdx_py

./: .gitignore  README.md  pyproject.toml  testscript.py
src/vdx_py/: __init__.py  nlp.py  variable.py  vector.py
vdx/: vdx.py
