[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "vdx"
license = {file = "LICENCE.TXT"}
readme = "README.md"
version = "0.1.0"
authors = [
  {name = "Anton E. Pozharskiy", email = "anton.pozharskiy@imtek.uni-freiburg.de"},
]
maintainers = [
  {name = "Anton E. Pozharskiy", email = "anton.pozharskiy@imtek.uni-freiburg.de"}
]